--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "blood_bound",
+  "name": "鲜血盟约导演器",
   "icons": [
     {
       "src": "favicon.ico",
